Kevin 添加验证码逻辑，登录、授权、校验等使用

--- a/pom.xml
+++ b/pom.xml
@@ -51,5 +51,6 @@
 		<module>cherry-sys</module>
 		<module>cherry-sys-test</module>
 		<module>cherry-ehcache</module>
+		<module>cherry-verification</module>
 	</modules>
 </project>
